# cocoa

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: ghcr-publish.yml
migrations/: 20240201174712_initial_migration.sql
mongo/: mongod-init.js
src/: main.rs
src/flavors/: admin.rs  lastfm.rs  mod.rs  silly.rs  user.rs
src/helper/: api.rs  data.rs  discord.rs  mod.rs
