[package]
name = "cocoa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
lastfm-rs = "0.5.0"

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }

env_logger = "0.11.1"
serde_json = "1.0.117"
reqwest = "0.11.24"

timeago = "0.4.2"
chrono = "0.4.38"