[package]
name = "cocoa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic function + quality of life
env_logger = "0.11.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

# Base libraries needed for implementation
poise = "0.6.1"
mongodb = "2.8.2"

# API access + deserialization tools
serde = "1.0.196"
serde_json = "1.0.117"
reqwest = "0.11.24"

# Time handling.
chrono = "0.4.38"
timeago = "0.4.2"
log = "0.4.20"